# django-vue-example

./: .gitignore  LICENSE  README.md
ninja-api/: README.md  compose.yml  dveapi.Dockerfile  static.Dockerfile  static.conf
ninja-api/dveapi/: LICENSE  poetry.toml  pyproject.toml  settings.toml
ninja-api/dveapi/authenticate/: api.py  controllers.py  models.py  permissions.py  schema.py  urls.py
ninja-api/dveapi/config/: asgi.py  settings.py  urls.py  wsgi.py
ninja-api/dveapi/fileManager/: api.py  controller.py
ninja-api/dveapi/playground/: api.py  controller.py
ninja-api/dveapi/tests/fileManager/: test_api.py
ninja-api/dveapiChart/: Chart.yaml  values.yaml
ninja-api/dveapiChart/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml  volumes.yaml
quasar-app/: compose.yml  dveapp.Dockerfile
quasar-app/dveApp/: .env  README.md  package-lock.json  package.json  quasar.config.js
quasar-app/dveApp/src/boot/: axios.ts
quasar-app/dveApp/src/components/auth/: UserHandler.vue
quasar-app/dveApp/src/pages/: LoginView.vue
quasar-app/dveApp/src/pages/apps/: apps.js
quasar-app/dveApp/src/pages/apps/layout/: AppsHomeView.vue  AppsLayout.vue  AppsToolbar.vue  layoutConfig.js
quasar-app/dveApp/src/pages/apps/playground/: CustomUploader.vue  PlaygroundView.vue  playgroundConfig.js
quasar-app/dveApp/src/pages/apps/skeleton/: .SkeletonConfig.js.swp  (+2 more)
quasar-app/dveApp/src/router/: routes.ts
quasar-app/dveApp/src/stores/: AccountStore.ts
quasar-app/dveappChart/: values.yaml
quasar-app/dveappChart/templates/: _helpers.tpl  deployment.yaml
